// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-upload p-fileupload p-fileupload-advanced p-component"
        data-pc-name="fileupload"
        data-pc-section="root"
      >
        <div
          class="p-fileupload-buttonbar"
          data-pc-section="buttonbar"
        >
          <span
            class="om-react-ui-upload-btn om-react-ui-upload-btn-medium om-react-ui-upload-btn-choose p-button p-fileupload-choose p-component"
            data-p-disabled="false"
            data-p-focus="false"
            data-pc-section="choosebutton"
            tabindex="0"
          >
            <input
              data-pc-section="input"
              type="file"
            />
            <svg
              aria-hidden="true"
              class="p-icon p-button-icon p-clickable p-button-icon-left"
              data-pc-section="chooseicon"
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.67742 6.32258V0.677419C7.67742 0.497757 7.60605 0.325452 7.47901 0.198411C7.35197 0.0713707 7.17966 0 7 0C6.82034 0 6.64803 0.0713707 6.52099 0.198411C6.39395 0.325452 6.32258 0.497757 6.32258 0.677419V6.32258H0.677419C0.497757 6.32258 0.325452 6.39395 0.198411 6.52099C0.0713707 6.64803 0 6.82034 0 7C0 7.17966 0.0713707 7.35197 0.198411 7.47901C0.325452 7.60605 0.497757 7.67742 0.677419 7.67742H6.32258V13.3226C6.32492 13.5015 6.39704 13.6725 6.52358 13.799C6.65012 13.9255 6.82106 13.9977 7 14C7.17966 14 7.35197 13.9286 7.47901 13.8016C7.60605 13.6745 7.67742 13.5022 7.67742 13.3226V7.67742H13.3226C13.5022 7.67742 13.6745 7.60605 13.8016 7.47901C13.9286 7.35197 14 7.17966 14 7C13.9977 6.82106 13.9255 6.65012 13.799 6.52358C13.6725 6.39704 13.5015 6.32492 13.3226 6.32258H7.67742Z"
                fill="currentColor"
              />
            </svg>
            <span
              class="p-button-label p-clickable"
              data-pc-section="choosebuttonlabel"
            >
              Choose
            </span>
          </span>
          <button
            aria-hidden="true"
            aria-label="Upload"
            class="om-react-ui-upload-btn om-react-ui-upload-btn-medium om-react-ui-upload-btn-upload p-button p-component p-disabled"
            data-pc-name="button"
            data-pc-section="root"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="p-icon p-button-icon p-c p-button-icon-left"
              data-pc-section="uploadicon"
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6.58942 9.82197C6.70165 9.93405 6.85328 9.99793 7.012 10C7.17071 9.99793 7.32234 9.93405 7.43458 9.82197C7.54681 9.7099 7.61079 9.55849 7.61286 9.4V2.04798L9.79204 4.22402C9.84752 4.28011 9.91365 4.32457 9.98657 4.35479C10.0595 4.38502 10.1377 4.40039 10.2167 4.40002C10.2956 4.40039 10.3738 4.38502 10.4467 4.35479C10.5197 4.32457 10.5858 4.28011 10.6413 4.22402C10.7538 4.11152 10.817 3.95902 10.817 3.80002C10.817 3.64102 10.7538 3.48852 10.6413 3.37602L7.45127 0.190618C7.44656 0.185584 7.44176 0.180622 7.43687 0.175736C7.32419 0.063214 7.17136 0 7.012 0C6.85264 0 6.69981 0.063214 6.58712 0.175736C6.58181 0.181045 6.5766 0.186443 6.5715 0.191927L3.38282 3.37602C3.27669 3.48976 3.2189 3.6402 3.22165 3.79564C3.2244 3.95108 3.28746 4.09939 3.39755 4.20932C3.50764 4.31925 3.65616 4.38222 3.81182 4.38496C3.96749 4.3877 4.11814 4.33001 4.23204 4.22402L6.41113 2.04807V9.4C6.41321 9.55849 6.47718 9.7099 6.58942 9.82197ZM11.9952 14H2.02883C1.751 13.9887 1.47813 13.9228 1.22584 13.8061C0.973545 13.6894 0.746779 13.5241 0.558517 13.3197C0.370254 13.1154 0.22419 12.876 0.128681 12.6152C0.0331723 12.3545 -0.00990605 12.0775 0.0019109 11.8V9.40005C0.0019109 9.24092 0.065216 9.08831 0.1779 8.97579C0.290584 8.86326 0.443416 8.80005 0.602775 8.80005C0.762134 8.80005 0.914966 8.86326 1.02765 8.97579C1.14033 9.08831 1.20364 9.24092 1.20364 9.40005V11.8C1.18295 12.0376 1.25463 12.274 1.40379 12.4602C1.55296 12.6463 1.76817 12.7681 2.00479 12.8H11.9952C12.2318 12.7681 12.447 12.6463 12.5962 12.4602C12.7453 12.274 12.817 12.0376 12.7963 11.8V9.40005C12.7963 9.24092 12.8596 9.08831 12.9723 8.97579C13.085 8.86326 13.2378 8.80005 13.3972 8.80005C13.5565 8.80005 13.7094 8.86326 13.8221 8.97579C13.9347 9.08831 13.998 9.24092 13.998 9.40005V11.8C14.022 12.3563 13.8251 12.8996 13.45 13.3116C13.0749 13.7236 12.552 13.971 11.9952 14Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
              Upload
            </span>
          </button>
          <button
            aria-hidden="true"
            aria-label="Cancel"
            class="om-react-ui-upload-btn om-react-ui-upload-btn-medium om-react-ui-upload-btn-cancel p-button p-component p-disabled"
            data-pc-name="button"
            data-pc-section="root"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="p-icon p-button-icon p-c p-button-icon-left"
              data-pc-section="cancelicon"
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.01186 7.00933L12.27 2.75116C12.341 2.68501 12.398 2.60524 12.4375 2.51661C12.4769 2.42798 12.4982 2.3323 12.4999 2.23529C12.5016 2.13827 12.4838 2.0419 12.4474 1.95194C12.4111 1.86197 12.357 1.78024 12.2884 1.71163C12.2198 1.64302 12.138 1.58893 12.0481 1.55259C11.9581 1.51625 11.8617 1.4984 11.7647 1.50011C11.6677 1.50182 11.572 1.52306 11.4834 1.56255C11.3948 1.60204 11.315 1.65898 11.2488 1.72997L6.99067 5.98814L2.7325 1.72997C2.59553 1.60234 2.41437 1.53286 2.22718 1.53616C2.03999 1.53946 1.8614 1.61529 1.72901 1.74767C1.59663 1.88006 1.5208 2.05865 1.5175 2.24584C1.5142 2.43303 1.58368 2.61419 1.71131 2.75116L5.96948 7.00933L1.71131 11.2675C1.576 11.403 1.5 11.5866 1.5 11.7781C1.5 11.9696 1.576 12.1532 1.71131 12.2887C1.84679 12.424 2.03043 12.5 2.2219 12.5C2.41338 12.5 2.59702 12.424 2.7325 12.2887L6.99067 8.03052L11.2488 12.2887C11.3843 12.424 11.568 12.5 11.7594 12.5C11.9509 12.5 12.1346 12.424 12.27 12.2887C12.4053 12.1532 12.4813 11.9696 12.4813 11.7781C12.4813 11.5866 12.4053 11.403 12.27 11.2675L8.01186 7.00933Z"
                fill="currentColor"
              />
            </svg>
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
              Cancel
            </span>
          </button>
        </div>
        <div
          class="p-fileupload-content"
          data-p-highlight="false"
          data-pc-section="content"
        >
          <div
            data-pc-name="messages"
            data-pc-section="root"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-upload p-fileupload p-fileupload-advanced p-component"
      data-pc-name="fileupload"
      data-pc-section="root"
    >
      <div
        class="p-fileupload-buttonbar"
        data-pc-section="buttonbar"
      >
        <span
          class="om-react-ui-upload-btn om-react-ui-upload-btn-medium om-react-ui-upload-btn-choose p-button p-fileupload-choose p-component"
          data-p-disabled="false"
          data-p-focus="false"
          data-pc-section="choosebutton"
          tabindex="0"
        >
          <input
            data-pc-section="input"
            type="file"
          />
          <svg
            aria-hidden="true"
            class="p-icon p-button-icon p-clickable p-button-icon-left"
            data-pc-section="chooseicon"
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.67742 6.32258V0.677419C7.67742 0.497757 7.60605 0.325452 7.47901 0.198411C7.35197 0.0713707 7.17966 0 7 0C6.82034 0 6.64803 0.0713707 6.52099 0.198411C6.39395 0.325452 6.32258 0.497757 6.32258 0.677419V6.32258H0.677419C0.497757 6.32258 0.325452 6.39395 0.198411 6.52099C0.0713707 6.64803 0 6.82034 0 7C0 7.17966 0.0713707 7.35197 0.198411 7.47901C0.325452 7.60605 0.497757 7.67742 0.677419 7.67742H6.32258V13.3226C6.32492 13.5015 6.39704 13.6725 6.52358 13.799C6.65012 13.9255 6.82106 13.9977 7 14C7.17966 14 7.35197 13.9286 7.47901 13.8016C7.60605 13.6745 7.67742 13.5022 7.67742 13.3226V7.67742H13.3226C13.5022 7.67742 13.6745 7.60605 13.8016 7.47901C13.9286 7.35197 14 7.17966 14 7C13.9977 6.82106 13.9255 6.65012 13.799 6.52358C13.6725 6.39704 13.5015 6.32492 13.3226 6.32258H7.67742Z"
              fill="currentColor"
            />
          </svg>
          <span
            class="p-button-label p-clickable"
            data-pc-section="choosebuttonlabel"
          >
            Choose
          </span>
        </span>
        <button
          aria-hidden="true"
          aria-label="Upload"
          class="om-react-ui-upload-btn om-react-ui-upload-btn-medium om-react-ui-upload-btn-upload p-button p-component p-disabled"
          data-pc-name="button"
          data-pc-section="root"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="p-icon p-button-icon p-c p-button-icon-left"
            data-pc-section="uploadicon"
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6.58942 9.82197C6.70165 9.93405 6.85328 9.99793 7.012 10C7.17071 9.99793 7.32234 9.93405 7.43458 9.82197C7.54681 9.7099 7.61079 9.55849 7.61286 9.4V2.04798L9.79204 4.22402C9.84752 4.28011 9.91365 4.32457 9.98657 4.35479C10.0595 4.38502 10.1377 4.40039 10.2167 4.40002C10.2956 4.40039 10.3738 4.38502 10.4467 4.35479C10.5197 4.32457 10.5858 4.28011 10.6413 4.22402C10.7538 4.11152 10.817 3.95902 10.817 3.80002C10.817 3.64102 10.7538 3.48852 10.6413 3.37602L7.45127 0.190618C7.44656 0.185584 7.44176 0.180622 7.43687 0.175736C7.32419 0.063214 7.17136 0 7.012 0C6.85264 0 6.69981 0.063214 6.58712 0.175736C6.58181 0.181045 6.5766 0.186443 6.5715 0.191927L3.38282 3.37602C3.27669 3.48976 3.2189 3.6402 3.22165 3.79564C3.2244 3.95108 3.28746 4.09939 3.39755 4.20932C3.50764 4.31925 3.65616 4.38222 3.81182 4.38496C3.96749 4.3877 4.11814 4.33001 4.23204 4.22402L6.41113 2.04807V9.4C6.41321 9.55849 6.47718 9.7099 6.58942 9.82197ZM11.9952 14H2.02883C1.751 13.9887 1.47813 13.9228 1.22584 13.8061C0.973545 13.6894 0.746779 13.5241 0.558517 13.3197C0.370254 13.1154 0.22419 12.876 0.128681 12.6152C0.0331723 12.3545 -0.00990605 12.0775 0.0019109 11.8V9.40005C0.0019109 9.24092 0.065216 9.08831 0.1779 8.97579C0.290584 8.86326 0.443416 8.80005 0.602775 8.80005C0.762134 8.80005 0.914966 8.86326 1.02765 8.97579C1.14033 9.08831 1.20364 9.24092 1.20364 9.40005V11.8C1.18295 12.0376 1.25463 12.274 1.40379 12.4602C1.55296 12.6463 1.76817 12.7681 2.00479 12.8H11.9952C12.2318 12.7681 12.447 12.6463 12.5962 12.4602C12.7453 12.274 12.817 12.0376 12.7963 11.8V9.40005C12.7963 9.24092 12.8596 9.08831 12.9723 8.97579C13.085 8.86326 13.2378 8.80005 13.3972 8.80005C13.5565 8.80005 13.7094 8.86326 13.8221 8.97579C13.9347 9.08831 13.998 9.24092 13.998 9.40005V11.8C14.022 12.3563 13.8251 12.8996 13.45 13.3116C13.0749 13.7236 12.552 13.971 11.9952 14Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="p-button-label p-c"
            data-pc-section="label"
          >
            Upload
          </span>
        </button>
        <button
          aria-hidden="true"
          aria-label="Cancel"
          class="om-react-ui-upload-btn om-react-ui-upload-btn-medium om-react-ui-upload-btn-cancel p-button p-component p-disabled"
          data-pc-name="button"
          data-pc-section="root"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="p-icon p-button-icon p-c p-button-icon-left"
            data-pc-section="cancelicon"
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.01186 7.00933L12.27 2.75116C12.341 2.68501 12.398 2.60524 12.4375 2.51661C12.4769 2.42798 12.4982 2.3323 12.4999 2.23529C12.5016 2.13827 12.4838 2.0419 12.4474 1.95194C12.4111 1.86197 12.357 1.78024 12.2884 1.71163C12.2198 1.64302 12.138 1.58893 12.0481 1.55259C11.9581 1.51625 11.8617 1.4984 11.7647 1.50011C11.6677 1.50182 11.572 1.52306 11.4834 1.56255C11.3948 1.60204 11.315 1.65898 11.2488 1.72997L6.99067 5.98814L2.7325 1.72997C2.59553 1.60234 2.41437 1.53286 2.22718 1.53616C2.03999 1.53946 1.8614 1.61529 1.72901 1.74767C1.59663 1.88006 1.5208 2.05865 1.5175 2.24584C1.5142 2.43303 1.58368 2.61419 1.71131 2.75116L5.96948 7.00933L1.71131 11.2675C1.576 11.403 1.5 11.5866 1.5 11.7781C1.5 11.9696 1.576 12.1532 1.71131 12.2887C1.84679 12.424 2.03043 12.5 2.2219 12.5C2.41338 12.5 2.59702 12.424 2.7325 12.2887L6.99067 8.03052L11.2488 12.2887C11.3843 12.424 11.568 12.5 11.7594 12.5C11.9509 12.5 12.1346 12.424 12.27 12.2887C12.4053 12.1532 12.4813 11.9696 12.4813 11.7781C12.4813 11.5866 12.4053 11.403 12.27 11.2675L8.01186 7.00933Z"
              fill="currentColor"
            />
          </svg>
          <span
            class="p-button-label p-c"
            data-pc-section="label"
          >
            Cancel
          </span>
        </button>
      </div>
      <div
        class="p-fileupload-content"
        data-p-highlight="false"
        data-pc-section="content"
      >
        <div
          data-pc-name="messages"
          data-pc-section="root"
        >
          <div />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UploadFileBar renders error state with message 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-upload-file-bar om-react-ui-upload-file-bar-failure"
      >
        <div
          class="om-react-ui-upload-file-bar-inner"
        >
          <i
            class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-file"
            style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6 3C5.44772 3 5 3.44772 5 4V20C5 20.5523 5.44772 21 6 21H18C18.5523 21 19 20.5523 19 20V10H14C12.8954 10 12 9.10457 12 8V3H6ZM14 4.41421L17.5858 8H14V4.41421ZM3 4C3 2.34315 4.34315 1 6 1H13.4142L21 8.58579V20C21 21.6569 19.6569 23 18 23H6C4.34315 23 3 21.6569 3 20V4Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
          <span
            class="om-react-ui-upload-file-bar-name"
          >
            test.pdf
          </span>
          <i
            class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-status"
            style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 22 22"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11 0C17.0751 0 22 4.92487 22 11C22 17.0751 17.0751 22 11 22C4.92487 22 0 17.0751 0 11C0 4.92487 4.92487 0 11 0ZM11 13.5C10.1716 13.5 9.5 14.1716 9.5 15C9.5 15.8284 10.1716 16.5 11 16.5C11.8284 16.5 12.5 15.8284 12.5 15C12.5 14.1716 11.8284 13.5 11 13.5ZM10 5.5V12H12V5.5H10Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M10 12V5.5H12V12H10Z"
                fill="#AE0000"
                fill-rule="evenodd"
              />
              <path
                d="M12.5 15C12.5 15.8284 11.8284 16.5 11 16.5C10.1716 16.5 9.5 15.8284 9.5 15C9.5 14.1716 10.1716 13.5 11 13.5C11.8284 13.5 12.5 14.1716 12.5 15Z"
                fill="#AE0000"
              />
            </svg>
          </i>
          <span
            class="om-react-ui-upload-file-bar-message"
          >
            <i
              class="om-react-ui-icons-wrapper"
              style="display: inline-flex; align-items: center; justify-content: center; width: 16px; height: 16px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
            >
              <svg
                class="om-react-ui-icons"
                fill="none"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                shape-rendering="geometricPrecision"
                stroke="none"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.0002 14V7.49998H13.0002V14H11.0002Z"
                  fill-rule="evenodd"
                />
                <path
                  d="M13.5002 17C13.5002 17.8284 12.8286 18.5 12.0002 18.5C11.1718 18.5 10.5002 17.8284 10.5002 17C10.5002 16.1715 11.1718 15.5 12.0002 15.5C12.8286 15.5 13.5002 16.1715 13.5002 17Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M3.2256 16.7674L4.40106 20H19.5994L20.7748 16.7674L12.0002 3.60553L3.2256 16.7674ZM13.6643 2.49613C12.8727 1.30866 11.1277 1.30866 10.3361 2.49613L1.5615 15.658C1.2086 16.1874 1.1286 16.853 1.34601 17.4509L2.52147 20.6835C2.80889 21.4738 3.56005 22 4.40106 22H19.5994C20.4404 22 21.1915 21.4738 21.4789 20.6835L22.6544 17.4509C22.8718 16.853 22.7918 16.1874 22.4389 15.658L13.6643 2.49613Z"
                  fill-rule="evenodd"
                />
              </svg>
            </i>
            Upload failed
          </span>
        </div>
        <i
          class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-remove"
          role="button"
          style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
          tabindex="0"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.5001 4.5H16.8751V3.375C16.8751 2.67881 16.5985 2.01113 16.1063 1.51884C15.614 1.02656 14.9463 0.75 14.2501 0.75H9.7501C9.05391 0.75 8.38623 1.02656 7.89395 1.51884C7.40167 2.01113 7.1251 2.67881 7.1251 3.375V4.5H2.5V6.75H4.1251V19.5C4.1251 19.9973 4.32265 20.4742 4.67428 20.8258C5.02591 21.1775 5.50282 21.375 6.0001 21.375H18.0001C18.4974 21.375 18.9743 21.1775 19.3259 20.8258C19.6776 20.4742 19.8751 19.9973 19.8751 19.5V6.75H21.5001V4.5ZM9.3751 3.375C9.3751 3.27554 9.41461 3.18016 9.48494 3.10984C9.55527 3.03951 9.65065 3 9.7501 3H14.2501C14.3496 3 14.4449 3.03951 14.5153 3.10984C14.5856 3.18016 14.6251 3.27554 14.6251 3.375V4.5H9.3751V3.375ZM17.6251 19.125H6.3751V6.75H17.6251V19.125ZM10.8751 8.94057V17.1906H8.6251V8.94057H10.8751ZM15.3751 8.94057V17.1906H13.1251V8.94057H15.3751Z"
            />
          </svg>
        </i>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-upload-file-bar om-react-ui-upload-file-bar-failure"
    >
      <div
        class="om-react-ui-upload-file-bar-inner"
      >
        <i
          class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-file"
          style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6 3C5.44772 3 5 3.44772 5 4V20C5 20.5523 5.44772 21 6 21H18C18.5523 21 19 20.5523 19 20V10H14C12.8954 10 12 9.10457 12 8V3H6ZM14 4.41421L17.5858 8H14V4.41421ZM3 4C3 2.34315 4.34315 1 6 1H13.4142L21 8.58579V20C21 21.6569 19.6569 23 18 23H6C4.34315 23 3 21.6569 3 20V4Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
        <span
          class="om-react-ui-upload-file-bar-name"
        >
          test.pdf
        </span>
        <i
          class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-status"
          style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 22 22"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 0C17.0751 0 22 4.92487 22 11C22 17.0751 17.0751 22 11 22C4.92487 22 0 17.0751 0 11C0 4.92487 4.92487 0 11 0ZM11 13.5C10.1716 13.5 9.5 14.1716 9.5 15C9.5 15.8284 10.1716 16.5 11 16.5C11.8284 16.5 12.5 15.8284 12.5 15C12.5 14.1716 11.8284 13.5 11 13.5ZM10 5.5V12H12V5.5H10Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M10 12V5.5H12V12H10Z"
              fill="#AE0000"
              fill-rule="evenodd"
            />
            <path
              d="M12.5 15C12.5 15.8284 11.8284 16.5 11 16.5C10.1716 16.5 9.5 15.8284 9.5 15C9.5 14.1716 10.1716 13.5 11 13.5C11.8284 13.5 12.5 14.1716 12.5 15Z"
              fill="#AE0000"
            />
          </svg>
        </i>
        <span
          class="om-react-ui-upload-file-bar-message"
        >
          <i
            class="om-react-ui-icons-wrapper"
            style="display: inline-flex; align-items: center; justify-content: center; width: 16px; height: 16px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 16px; --icon-height: 16px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.0002 14V7.49998H13.0002V14H11.0002Z"
                fill-rule="evenodd"
              />
              <path
                d="M13.5002 17C13.5002 17.8284 12.8286 18.5 12.0002 18.5C11.1718 18.5 10.5002 17.8284 10.5002 17C10.5002 16.1715 11.1718 15.5 12.0002 15.5C12.8286 15.5 13.5002 16.1715 13.5002 17Z"
              />
              <path
                clip-rule="evenodd"
                d="M3.2256 16.7674L4.40106 20H19.5994L20.7748 16.7674L12.0002 3.60553L3.2256 16.7674ZM13.6643 2.49613C12.8727 1.30866 11.1277 1.30866 10.3361 2.49613L1.5615 15.658C1.2086 16.1874 1.1286 16.853 1.34601 17.4509L2.52147 20.6835C2.80889 21.4738 3.56005 22 4.40106 22H19.5994C20.4404 22 21.1915 21.4738 21.4789 20.6835L22.6544 17.4509C22.8718 16.853 22.7918 16.1874 22.4389 15.658L13.6643 2.49613Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
          Upload failed
        </span>
      </div>
      <i
        class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-remove"
        role="button"
        style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
        tabindex="0"
      >
        <svg
          class="om-react-ui-icons"
          fill="none"
          height="20"
          preserveAspectRatio="xMidYMid meet"
          shape-rendering="geometricPrecision"
          stroke="none"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.5001 4.5H16.8751V3.375C16.8751 2.67881 16.5985 2.01113 16.1063 1.51884C15.614 1.02656 14.9463 0.75 14.2501 0.75H9.7501C9.05391 0.75 8.38623 1.02656 7.89395 1.51884C7.40167 2.01113 7.1251 2.67881 7.1251 3.375V4.5H2.5V6.75H4.1251V19.5C4.1251 19.9973 4.32265 20.4742 4.67428 20.8258C5.02591 21.1775 5.50282 21.375 6.0001 21.375H18.0001C18.4974 21.375 18.9743 21.1775 19.3259 20.8258C19.6776 20.4742 19.8751 19.9973 19.8751 19.5V6.75H21.5001V4.5ZM9.3751 3.375C9.3751 3.27554 9.41461 3.18016 9.48494 3.10984C9.55527 3.03951 9.65065 3 9.7501 3H14.2501C14.3496 3 14.4449 3.03951 14.5153 3.10984C14.5856 3.18016 14.6251 3.27554 14.6251 3.375V4.5H9.3751V3.375ZM17.6251 19.125H6.3751V6.75H17.6251V19.125ZM10.8751 8.94057V17.1906H8.6251V8.94057H10.8751ZM15.3751 8.94057V17.1906H13.1251V8.94057H15.3751Z"
          />
        </svg>
      </i>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UploadFileBar renders success state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-upload-file-bar om-react-ui-upload-file-bar-success"
      >
        <div
          class="om-react-ui-upload-file-bar-inner"
        >
          <i
            class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-file"
            style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M6 3C5.44772 3 5 3.44772 5 4V20C5 20.5523 5.44772 21 6 21H18C18.5523 21 19 20.5523 19 20V10H14C12.8954 10 12 9.10457 12 8V3H6ZM14 4.41421L17.5858 8H14V4.41421ZM3 4C3 2.34315 4.34315 1 6 1H13.4142L21 8.58579V20C21 21.6569 19.6569 23 18 23H6C4.34315 23 3 21.6569 3 20V4Z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
          <span
            class="om-react-ui-upload-file-bar-name"
          >
            test.pdf
          </span>
          <i
            class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-status"
            style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
          >
            <svg
              class="om-react-ui-icons"
              fill="none"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              shape-rendering="geometricPrecision"
              stroke="none"
              viewBox="0 0 22 22"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11 0C17.0751 0 22 4.92487 22 11C22 17.0751 17.0751 22 11 22C4.92487 22 0 17.0751 0 11C0 4.92487 4.92487 0 11 0ZM10.1992 12.3398L7.11426 9.32715L5.7168 10.7578L10.2373 15.1719L16.8418 8.37012L15.4072 6.97656L10.1992 12.3398Z"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M16.8417 8.36972L10.2374 15.1716L5.71699 10.7579L7.11423 9.32687L10.1996 12.3395L15.4068 6.97651L16.8417 8.36972Z"
                fill="#1F5800"
                fill-rule="evenodd"
              />
            </svg>
          </i>
        </div>
        <i
          class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-remove"
          role="button"
          style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
          tabindex="0"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.5001 4.5H16.8751V3.375C16.8751 2.67881 16.5985 2.01113 16.1063 1.51884C15.614 1.02656 14.9463 0.75 14.2501 0.75H9.7501C9.05391 0.75 8.38623 1.02656 7.89395 1.51884C7.40167 2.01113 7.1251 2.67881 7.1251 3.375V4.5H2.5V6.75H4.1251V19.5C4.1251 19.9973 4.32265 20.4742 4.67428 20.8258C5.02591 21.1775 5.50282 21.375 6.0001 21.375H18.0001C18.4974 21.375 18.9743 21.1775 19.3259 20.8258C19.6776 20.4742 19.8751 19.9973 19.8751 19.5V6.75H21.5001V4.5ZM9.3751 3.375C9.3751 3.27554 9.41461 3.18016 9.48494 3.10984C9.55527 3.03951 9.65065 3 9.7501 3H14.2501C14.3496 3 14.4449 3.03951 14.5153 3.10984C14.5856 3.18016 14.6251 3.27554 14.6251 3.375V4.5H9.3751V3.375ZM17.6251 19.125H6.3751V6.75H17.6251V19.125ZM10.8751 8.94057V17.1906H8.6251V8.94057H10.8751ZM15.3751 8.94057V17.1906H13.1251V8.94057H15.3751Z"
            />
          </svg>
        </i>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-upload-file-bar om-react-ui-upload-file-bar-success"
    >
      <div
        class="om-react-ui-upload-file-bar-inner"
      >
        <i
          class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-file"
          style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6 3C5.44772 3 5 3.44772 5 4V20C5 20.5523 5.44772 21 6 21H18C18.5523 21 19 20.5523 19 20V10H14C12.8954 10 12 9.10457 12 8V3H6ZM14 4.41421L17.5858 8H14V4.41421ZM3 4C3 2.34315 4.34315 1 6 1H13.4142L21 8.58579V20C21 21.6569 19.6569 23 18 23H6C4.34315 23 3 21.6569 3 20V4Z"
              fill-rule="evenodd"
            />
          </svg>
        </i>
        <span
          class="om-react-ui-upload-file-bar-name"
        >
          test.pdf
        </span>
        <i
          class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-status"
          style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
        >
          <svg
            class="om-react-ui-icons"
            fill="none"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            shape-rendering="geometricPrecision"
            stroke="none"
            viewBox="0 0 22 22"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 0C17.0751 0 22 4.92487 22 11C22 17.0751 17.0751 22 11 22C4.92487 22 0 17.0751 0 11C0 4.92487 4.92487 0 11 0ZM10.1992 12.3398L7.11426 9.32715L5.7168 10.7578L10.2373 15.1719L16.8418 8.37012L15.4072 6.97656L10.1992 12.3398Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M16.8417 8.36972L10.2374 15.1716L5.71699 10.7579L7.11423 9.32687L10.1996 12.3395L15.4068 6.97651L16.8417 8.36972Z"
              fill="#1F5800"
              fill-rule="evenodd"
            />
          </svg>
        </i>
      </div>
      <i
        class="om-react-ui-icons-wrapper om-react-ui-upload-file-bar-icon-remove"
        role="button"
        style="display: inline-flex; align-items: center; justify-content: center; width: 20px; height: 20px; color: rgb(19, 19, 19); font-style: normal; --icon-color: #131313; --icon-width: 20px; --icon-height: 20px;"
        tabindex="0"
      >
        <svg
          class="om-react-ui-icons"
          fill="none"
          height="20"
          preserveAspectRatio="xMidYMid meet"
          shape-rendering="geometricPrecision"
          stroke="none"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.5001 4.5H16.8751V3.375C16.8751 2.67881 16.5985 2.01113 16.1063 1.51884C15.614 1.02656 14.9463 0.75 14.2501 0.75H9.7501C9.05391 0.75 8.38623 1.02656 7.89395 1.51884C7.40167 2.01113 7.1251 2.67881 7.1251 3.375V4.5H2.5V6.75H4.1251V19.5C4.1251 19.9973 4.32265 20.4742 4.67428 20.8258C5.02591 21.1775 5.50282 21.375 6.0001 21.375H18.0001C18.4974 21.375 18.9743 21.1775 19.3259 20.8258C19.6776 20.4742 19.8751 19.9973 19.8751 19.5V6.75H21.5001V4.5ZM9.3751 3.375C9.3751 3.27554 9.41461 3.18016 9.48494 3.10984C9.55527 3.03951 9.65065 3 9.7501 3H14.2501C14.3496 3 14.4449 3.03951 14.5153 3.10984C14.5856 3.18016 14.6251 3.27554 14.6251 3.375V4.5H9.3751V3.375ZM17.6251 19.125H6.3751V6.75H17.6251V19.125ZM10.8751 8.94057V17.1906H8.6251V8.94057H10.8751ZM15.3751 8.94057V17.1906H13.1251V8.94057H15.3751Z"
          />
        </svg>
      </i>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
